# reddit-deliver

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  README.ko.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py
specs/001-reddit-webhook-monitor/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-reddit-webhook-monitor/contracts/: cli-interface.md
specs/002-docker-deployment/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-docker-deployment/contracts/: github-actions-workflows.md
src/cli/: __init__.py  config.py  init_from_env.py  main.py  monitor_cmd.py  subreddit.py  webhook.py
src/lib/: logger.py  rate_limiter.py
src/models/: __init__.py  post.py  subreddit.py  translation.py  user_config.py  webhook_config.py
src/services/: base_translator.py  gemini_translator.py  monitor.py  reddit_client.py  translator.py  translator_factory.py  webhook_sender.py
src/storage/: database.py
src/storage/migrations/: add_translator_service.py  init_schema.py
